src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1609</description>
        <label>Lead Source - Most Recent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Client Enquiry</fullName>
                </value>
                <value>
                    <fullName>Client referral</fullName>
                </value>
                <value>
                    <fullName>Display Advertising</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Event Industry</fullName>
                </value>
                <value>
                    <fullName>Event IQVIA Hosted</fullName>
                </value>
                <value>
                    <fullName>Extension to Prior Opportunity</fullName>
                </value>
                <value>
                    <fullName>Formal RFP</fullName>
                </value>
                <value>
                    <fullName>Internal referral</fullName>
                </value>
                <value>
                    <fullName>Organic Social</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
                <value>
                    <fullName>Paid Search</fullName>
                </value>
                <value>
                    <fullName>Paid Social</fullName>
                </value>
                <value>
                    <fullName>Partner referral</fullName>
                </value>
                <value>
                    <fullName>Renewal of prior opportunity</fullName>
                </value>
                <value>
                    <fullName>Sales Presentation &amp; Prospecting</fullName>
                </value>
                <value>
                    <fullName>Third Party Provider</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Original_Detail__c</fullName>
        <description>CRM-MC-ESPSFDCQI-391</description>
        <label>Lead Source Detail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Original__c</fullName>
        <description>CRM-MC-ESPSFDCQI-391</description>
        <label>Lead Source - Original</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>800 line</fullName>
                    <isActive>false</isActive>
                    <label>800 line</label>
                </value>
                <value>
                    <fullName>Action Plan</fullName>
                    <isActive>false</isActive>
                    <label>Action Plan</label>
                </value>
                <value>
                    <fullName>Advertisement</fullName>
                    <isActive>false</isActive>
                    <label>Advertisement</label>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                    <isActive>false</isActive>
                    <label>Advertising</label>
                </value>
                <value>
                    <fullName>BioPharm Insight</fullName>
                    <isActive>false</isActive>
                    <label>BioPharm Insight</label>
                </value>
                <value>
                    <fullName>Center of Excellence</fullName>
                    <isActive>false</isActive>
                    <label>Center of Excellence</label>
                </value>
                <value>
                    <fullName>CIDD</fullName>
                    <isActive>false</isActive>
                    <label>CIDD</label>
                </value>
                <value>
                    <fullName>Client Enquiry</fullName>
                </value>
                <value>
                    <fullName>Client referral</fullName>
                </value>
                <value>
                    <fullName>Clinical Info Mailbox</fullName>
                    <isActive>false</isActive>
                    <label>Clinical Info Mailbox</label>
                </value>
                <value>
                    <fullName>Conference</fullName>
                    <isActive>false</isActive>
                    <label>Conference</label>
                </value>
                <value>
                    <fullName>Customer Referral</fullName>
                    <isActive>false</isActive>
                    <label>Customer Referral</label>
                </value>
                <value>
                    <fullName>CVIP</fullName>
                    <isActive>false</isActive>
                    <label>CVIP</label>
                </value>
                <value>
                    <fullName>Database Marketing</fullName>
                    <isActive>false</isActive>
                    <label>Database Marketing</label>
                </value>
                <value>
                    <fullName>Direct Marketing</fullName>
                    <isActive>false</isActive>
                    <label>Direct Marketing</label>
                </value>
                <value>
                    <fullName>Display Advertising</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                    <isActive>false</isActive>
                    <label>Employee Referral</label>
                </value>
                <value>
                    <fullName>Event Industry</fullName>
                </value>
                <value>
                    <fullName>Event - Industry</fullName>
                    <isActive>false</isActive>
                    <label>Event - Industry</label>
                </value>
                <value>
                    <fullName>Event IQVIA Hosted</fullName>
                </value>
                <value>
                    <fullName>Event - IQVIA Hosted</fullName>
                    <isActive>false</isActive>
                    <label>Event - IQVIA Hosted</label>
                </value>
                <value>
                    <fullName>Event - Webinar</fullName>
                    <isActive>false</isActive>
                    <label>Event - Webinar</label>
                </value>
                <value>
                    <fullName>Existing Business</fullName>
                    <isActive>false</isActive>
                    <label>Existing Business</label>
                </value>
                <value>
                    <fullName>Extension to Prior Opportunity</fullName>
                </value>
                <value>
                    <fullName>Formal RFP</fullName>
                </value>
                <value>
                    <fullName>IMS Health</fullName>
                    <isActive>false</isActive>
                    <label>IMS Health</label>
                </value>
                <value>
                    <fullName>Incoming Website</fullName>
                    <isActive>false</isActive>
                    <label>Incoming Website</label>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                    <isActive>false</isActive>
                    <label>Inside Sales</label>
                </value>
                <value>
                    <fullName>Internal referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <description>CRM-QI-ESPSFDCQI-326 External id to allow cross referencing during data migration</description>
        <externalId>true</externalId>
        <inlineHelpText>External id to allow cross referencing during data migration</inlineHelpText>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mapped_Functional_Area__c</fullName>
        <description>CRM-MC-ESPSFDCQI-4675</description>
        <label>Mapped Functional Area</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapped_Job_Level__c</fullName>
        <description>CRM-MC-ESPSFDCQI-4675</description>
        <label>Mapped Job Level</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Source__c</fullName>
        <description>CRM-QI-ESPSFDCQI-322 Field to indicate source of migrated records. Used for data migration and reconciliation.</description>
        <inlineHelpText>Field to indicate source of migrated records. Used for data migration and reconciliation.</inlineHelpText>
        <label>Migration Source</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Accept_Reason_Detail__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1610</description>
        <label>Not Accept Reason Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bad Email Address</fullName>
                </value>
                <value>
                    <fullName>Bad Phone Number</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>No Potential Need</fullName>
                </value>
                <value>
                    <fullName>Unknown Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_Accept_Reason__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1610</description>
        <label>Not Accept Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bad Contact Data</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Do Not Share with Sales</fullName>
                </value>
                <value>
                    <fullName>Duplicate Request</fullName>
                </value>
                <value>
                    <fullName>Employment Request</fullName>
                </value>
                <value>
                    <fullName>Incomplete Contact Data</fullName>
                </value>
                <value>
                    <fullName>No Offering for Requested Service</fullName>
                </value>
                <value>
                    <fullName>No Potential Need</fullName>
                </value>
                <value>
                    <fullName>Patient Seeking Trial</fullName>
                </value>
                <value>
                    <fullName>Site/Investigator Request</fullName>
                </value>
                <value>
                    <fullName>Vendor Solicitation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Novella_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Novella Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nurture_Area__c</fullName>
        <description>CRM-MC-ESPSFDCQI-409 - This field will store the value of the nurture area distinguished by sales and will then update the nurture area field on the related contact</description>
        <label>Nurture Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Disposition__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Real World Evidence</fullName>
                </value>
                <value>
                    <fullName>Commercialization</fullName>
                </value>
                <value>
                    <fullName>Integrated Global Compliance</fullName>
                </value>
                <value>
                    <fullName>Technologies</fullName>
                </value>
                <value>
                    <fullName>Industry Segments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nurture_Detail_Other__c</fullName>
        <description>CRM-MC-ESPSFDCQI-409</description>
        <label>Nurture Detail Other</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nurture_Detail__c</fullName>
        <description>CRM-MC-ESPSFDCQI-409 - This field will store the value of the nurture detail made by sales and will then update the nurture detail field on the related contact</description>
        <label>Nurture Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Nurture_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>COVID-19 Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>Functional Services</fullName>
                </value>
                <value>
                    <fullName>Virtual Trials</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Real World Data Sets</fullName>
                </value>
                <value>
                    <fullName>Study Design</fullName>
                </value>
                <value>
                    <fullName>Platforms</fullName>
                </value>
                <value>
                    <fullName>Evidence Networks</fullName>
                </value>
                <value>
                    <fullName>Health Economics &amp; Value</fullName>
                </value>
                <value>
                    <fullName>Regulatory and Safety</fullName>
                </value>
                <value>
                    <fullName>COVID-19 Commercialization</fullName>
                </value>
                <value>
                    <fullName>Launch Strategy and Management</fullName>
                </value>
                <value>
                    <fullName>Brand Strategy and Management</fullName>
                </value>
                <value>
                    <fullName>Pricing and Market Access</fullName>
                </value>
                <value>
                    <fullName>Healthcare Professional Engagement</fullName>
                </value>
                <value>
                    <fullName>Patient Engagement</fullName>
                </value>
                <value>
                    <fullName>Promotional Strategy</fullName>
                </value>
                <value>
                    <fullName>Safety Pharmacovigilance</fullName>
                </value>
                <value>
                    <fullName>Regulatory Compliance</fullName>
                </value>
                <value>
                    <fullName>Quality Compliance</fullName>
                </value>
                <value>
                    <fullName>Commercial Compliance</fullName>
                </value>
                <value>
                    <fullName>Orchestrated Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>Clinical Acceleration</fullName>
                </value>
                <value>
                    <fullName>Content Management</fullName>
                </value>
                <value>
                    <fullName>Customer Engagement</fullName>
                </value>
                <value>
                    <fullName>Safety Regulatory &amp; Quality</fullName>
                </value>
                <value>
                    <fullName>Performance Management &amp; Insights</fullName>
                </value>
                <value>
                    <fullName>Information Management</fullName>
                </value>
                <value>
                    <fullName>Partner Programs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Product__c</fullName>
        <description>PEP-ACN-Other products</description>
        <inlineHelpText>Other product if not available in the above product list.</inlineHelpText>
        <label>Other Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Regions__c</fullName>
        <description>PEP-ACN-Custom field Potetial Region</description>
        <label>Potential Regions (Scope of Lead)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA (Europe, Middle East, Africa)</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Lead_Score__c</fullName>
        <description>CRM-MC-ESPSFDCQI-393 - This field will be leveraged by sales / marketing to capture the previous lead score value for more insight into the prospects and customers.,ESPSFDCQI-17316</description>
        <label>Previous IQVIA Lead Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Mapped_Business_Function__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Primary Mapped Business Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Mapped_Title__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Primary Mapped Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>PEP-ACN-Product displayed</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OCE Personal</fullName>
                </value>
                <value>
                    <fullName>OCE Digital</fullName>
                </value>
                <value>
                    <fullName>HCPO Engage Management</fullName>
                </value>
                <value>
                    <fullName>IQVIA Transparency Reporting</fullName>
                </value>
                <value>
                    <fullName>SmartSolve</fullName>
                </value>
                <value>
                    <fullName>AETracker</fullName>
                </value>
                <value>
                    <fullName>OneKey</fullName>
                </value>
                <value>
                    <fullName>Other Product</fullName>
                </value>
                <value>
                    <fullName>One Home For Sites</fullName>
                </value>
                <value>
                    <fullName>AE Tracker</fullName>
                    <isActive>false</isActive>
                    <label>AE Tracker</label>
                </value>
                <value>
                    <fullName>HCP/O Engage Management</fullName>
                    <isActive>false</isActive>
                    <label>HCP/O Engage Management</label>
                </value>
                <value>
                    <fullName>Kadrige</fullName>
                    <isActive>false</isActive>
                    <label>Kadrige</label>
                </value>
                <value>
                    <fullName>Nexxus MI</fullName>
                    <isActive>false</isActive>
                    <label>Nexxus MI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Designation__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1911 - Contact suffix, for example Ph.D., C.P.A., etc.</description>
        <inlineHelpText>Contact suffix, for example Ph.D., C.P.A., etc.</inlineHelpText>
        <label>Professional Designation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q2_Area_of_Interest__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1775</description>
        <label>Q2 Area of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd Party Lab Management</fullName>
                </value>
                <value>
                    <fullName>ADME</fullName>
                    <isActive>false</isActive>
                    <label>ADME</label>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                    <isActive>false</isActive>
                    <label>Analytics</label>
                </value>
                <value>
                    <fullName>Anatomic Pathology</fullName>
                </value>
                <value>
                    <fullName>Assay Development</fullName>
                    <isActive>false</isActive>
                    <label>Assay Development</label>
                </value>
                <value>
                    <fullName>Bioanalytical &amp; ADME Services</fullName>
                </value>
                <value>
                    <fullName>Bioanalytical Laboratories</fullName>
                    <isActive>false</isActive>
                    <label>Bioanalytical Laboratories</label>
                </value>
                <value>
                    <fullName>Bioinformatics</fullName>
                    <isActive>false</isActive>
                    <label>Bioinformatics</label>
                </value>
                <value>
                    <fullName>Bioinformatics - Genomics</fullName>
                </value>
                <value>
                    <fullName>Biomarkers</fullName>
                    <isActive>false</isActive>
                    <label>Biomarkers</label>
                </value>
                <value>
                    <fullName>Biomarker Services</fullName>
                </value>
                <value>
                    <fullName>Central Laboratories</fullName>
                    <isActive>false</isActive>
                    <label>Central Laboratories</label>
                </value>
                <value>
                    <fullName>Central Lab Services</fullName>
                </value>
                <value>
                    <fullName>Clinical Trials</fullName>
                    <isActive>false</isActive>
                    <label>Clinical Trials</label>
                </value>
                <value>
                    <fullName>Companion Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Data Integration</fullName>
                    <isActive>false</isActive>
                    <label>Data Integration</label>
                </value>
                <value>
                    <fullName>Digital Pathology</fullName>
                </value>
                <value>
                    <fullName>Employee Health Screening</fullName>
                </value>
                <value>
                    <fullName>End to End Services</fullName>
                    <isActive>false</isActive>
                    <label>End to End Services</label>
                </value>
                <value>
                    <fullName>Flow Cytometry</fullName>
                </value>
                <value>
                    <fullName>Genomics</fullName>
                    <isActive>false</isActive>
                    <label>Genomics</label>
                </value>
                <value>
                    <fullName>Genomic Services</fullName>
                </value>
                <value>
                    <fullName>Immunoassay Services</fullName>
                </value>
                <value>
                    <fullName>Immunogenicity testing</fullName>
                </value>
                <value>
                    <fullName>Infectious Disease</fullName>
                    <isActive>false</isActive>
                    <label>Infectious Disease</label>
                </value>
                <value>
                    <fullName>Lab Data Management</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Precision Medicine</fullName>
                    <isActive>false</isActive>
                    <label>Precision Medicine</label>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                    <isActive>false</isActive>
                    <label>Project Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <description>PRM-ACN-PRM-70-Reason Code</description>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate Opportunity</fullName>
                </value>
                <value>
                    <fullName>Insufficient Information</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Central East &amp; South Europe</fullName>
                    <isActive>false</isActive>
                    <label>Central East &amp; South Europe</label>
                </value>
                <value>
                    <fullName>Europe, Middle East &amp; Africa</fullName>
                </value>
                <value>
                    <fullName>IQVIA Region Pick List</fullName>
                    <isActive>false</isActive>
                    <label>IQVIA Region Pick List</label>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North Europe, Middle East &amp; Africa</fullName>
                    <isActive>false</isActive>
                    <label>North Europe, Middle East &amp; Africa</label>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                    <label>Test</label>
                </value>
                <value>
                    <fullName>US &amp; Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMSOpt_InDate__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>SMSOpt InDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMSOpt_InMethod__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>SMSOpt InMethod</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Website Form</fullName>
                </value>
                <value>
                    <fullName>Webinar Registration</fullName>
                </value>
                <value>
                    <fullName>Event List</fullName>
                </value>
                <value>
                    <fullName>Email Opt-in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMSOpt_OutDate__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>SMSOpt OutDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_Out_Method__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>SMS Opt Out Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Email Opt-in</fullName>
                    <isActive>false</isActive>
                    <label>Email Opt-in</label>
                </value>
                <value>
                    <fullName>Event List</fullName>
                    <isActive>false</isActive>
                    <label>Event List</label>
                </value>
                <value>
                    <fullName>Event Upload</fullName>
                </value>
                <value>
                    <fullName>Web Form</fullName>
                </value>
                <value>
                    <fullName>Webinar Registration</fullName>
                    <isActive>false</isActive>
                    <label>Webinar Registration</label>
                </value>
                <value>
                    <fullName>Website Form</fullName>
                    <isActive>false</isActive>
                    <label>Website Form</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMS_Status__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>SMS Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Opted In</fullName>
                </value>
                <value>
                    <fullName>Opted Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope_of_Role__c</fullName>
        <description>CRM_MC_ESPSFDCQI-1288 -</description>
        <label>Scope of Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Mapped_Business_Function__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Secondary Mapped Business Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Mapped_Title__c</fullName>
        <description>CRM-MC-ESPSFDCQI-394</description>
        <label>Secondary Mapped Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selling_to_HQ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PEP-ACN-custom checkbox &apos;selling to HQ&apos;</description>
        <label>Selling to HQ</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>